--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Varun-React</title>
+    <title>Varun-Foods</title>
+    <link rel="icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSd4OxZ5PgZrNnnVWEzgtRahA4KF40LhgMwdspO9D6tYJaljhXBHlkFzQbV0LkPLb6Nkfc&usqp=CAU">
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <div id="root">
-        <h1>NS200🏍️💨 is here!</h1>
+        <h1>Not Rendered...</h1>
     </div>
     <script type="module" src="./src/App.js"></script>
 </body>
